# QueryFilter

./: .gitignore  README.md  demo.ipynb  pyproject.toml
src/tako_query_filter/: filter.py  whitelist.py
