[tool.poetry]
authors = ["Noah Jackson <noah@trytako.com>"]
description = "Combines models to predict which queries Tako's API should handle"
include = ["keywords.json"]
name = "tako-query-filter"
packages = [{include = "tako_query_filter", from = "src"}]
readme = "README.md"
version = "0.1.4"

[tool.poetry.dependencies]
en-tako-query-filter = {url = "https://huggingface.co/TakoData/en_tako_query_filter/resolve/main/en_tako_query_filter-any-py3-none-any.whl"}
ipykernel = "6.29.5"
jupyter = "1.1.1"
nbstripout = "0.7.1"
python = ">=3.10.14,<3.13"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
